# merry-go-round-rs

./: .gitignore  .npmignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  semantic-release.yml
__test__/: album-art.spec.ts  audio.spec.ts  index.spec.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: album_art.rs  album_art_type.rs  lib.rs
