[package]
edition = "2021"
name = "merry-go-round"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi6", "async", "tokio_rt"] }
napi-derive = "2.11.0"
id3 = "1.6.0"
infer = "0.12.0"
dirs = "4.0.0"
lofty = "0.11.0"
tokio = { version = "1", features = ["default", "fs"] }
futures = "0.3.17"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
